# B5-Bot

./: .gitmodules  CMakeLists.txt  README.md  bot.cpp
.github/workflows/: run_bot.yml
